--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1{
     margin-left: 30px;
     margin-bottom: 30px;
     border-radius: 10%;
+    background-color: ghostwhite;
 }
 .footer{
     background-color: gainsboro;
