--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body{
+    display: flex;
+    justify-content: space-around;
     background-color: lightslategray;
 }
 
 .container{
     display: flex;
     flex-direction: column;
-    margin: auto;
     margin-top: 40px;
-    background-color:burlywood ;
+    background-color: blanchedalmond;
     width: 340px;
     height: 600px;
 }
@@ -33,7 +34,7 @@ h1{
     opacity: 75%;
 }
 .butt{
-    display: flex; 
+    display: block; 
     width: 70px;
     height: 30px;
     margin-left: 30px;
@@ -55,14 +56,14 @@ h1{
    width: 50px;
 }
 .bt{
-    display: flex;
+    display: block;
     background-color: darkgray;
     width: 5px;
     height: 5px;
     border-radius: 50%;
 }
 .bt1{
-    display: flex;
+    display: block;
     background-color: dimgray;
     width: 7px;
     height: 7px;
