--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     background-size: 340px 550px;
     width: 340px;
     height: 550px;
-    color: ffffff;
+    color: #ffffff;
 }
 .classp{
     margin-left: 30px;
