--- a/style2.css
+++ b/style2.css
@@ -11,7 +11,7 @@ p.text::first-letter{
 
 .text{
     font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Kalam', cursive;
     word-spacing: 3px;
     letter-spacing: 1.5px;
 }
